--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,9 @@ button {
     color: rgb(30, 30, 30);
     border: 1px solid rgb(69, 69, 69);
 }
+button:hover {
+    background-color: rgb(197, 196, 184);
+}
 
 article:nth-of-type(2) {
     margin-top: 120px;
